--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         </style>
     </head>
     <body>
+		<script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+		
         <script type="importmap">
 			{
 				"imports": {
